After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740170 - warning: incompatible implicit declaration of built-in function 'strlen'
warning: incompatible implicit declaration of built-in function 'strlen'
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-15 14:33 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix warning (1.32 KB, patch)
2014-11-15 14:49 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2014-11-15 14:33:34 UTC
This happens at

jawtoplevel.c:92:15: warning: incompatible implicit declaration of built-in function 'strlen'
Comment 1 Magdalen Berns (irc magpie) 2014-11-15 14:49:22 UTC
Created attachment 290755 [details] [review]
patch to fix warning
Comment 2 André Klapper 2015-02-27 16:58:34 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]