FIX incompatible implicit declaration warning

adding the <string.h> since that's where strcpy is defined

Bug https://bugzilla.gnome.org/show_bug.cgi?id=740170